--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,83 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>{{ page.title }}</title>
-</head>
-<body>
-  <h1><a href="/index.html">My First Jekyll-Powered Blog</a></h1>
-  {{ content }}
-<h2>Recent Posts</h2>
-<ul>
-  {% for post in site.posts do %}
-  <li>
-    {{ post.date }} <a href="{{ post.url }}">{{ post.title }}</a>
-  </li>
-  {% endfor %}
-</ul>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        {% if page.title %}
+        <title>{{ page.title }} :: kazbak.co.uk</title>
+        {% else %}
+        <title>kazbak.co.uk</title>
+        {% endif %}
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="Joel Cross">
+
+        <!-- Le styles -->
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+        {% stylesheet custom %}
+        <style>
+            body {
+                padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+            }
+        </style>
+        <link href="css/bootstrap-responsive.css" rel="stylesheet">
+
+        <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+        <![endif]-->
+
+        <!-- Le fav and touch icons -->
+        <!--
+        <link rel="shortcut icon" href="ico/favicon.ico">
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
+        -->
+    </head>
+
+    <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">kazbak.co.uk</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li class="{% if page.section == 'home' %}active{% endif %}"><a href="/">Home</a></li>
+                <li class="{% if page.section == 'blog' %}active{% endif %}"><a href="/blog">Blog</a></li>
+            </ul>
+        </div><!--/.navbar-collapse -->
+      </div>
+    </div>
+    
+    <div class="container">
+            {{ content }}
+            {% if page.date %}
+            <p>Posted on {{ page.date | date: "%-d %B %Y" }}.</p>
+            {% endif %}
+
+            <hr />
+
+            <footer>
+            <p>&copy; 2012-2013 Joel Cross</p>
+            </footer>
+
+    </div> <!-- /container -->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
+    </body>
 </html>
