--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         {% if page.title %}
-        <title>{{ page.title }} :: kazbak.co.uk</title>
+        <title>{{ page.title }} :: {{ site.name }}</title>
         {% else %}
-        <title>kazbak.co.uk</title>
+        <title>{{ site.name }}</title>
         {% endif %}
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
+        <meta name="description" content="{{ site.description }}">
         <meta name="author" content="Joel Cross">
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
 
         <!-- Le styles -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
